Fix modal overflow

--- a/css/global.css
+++ b/css/global.css
@@ -306,6 +306,11 @@ main.flexcontainer {
 	box-shadow: 0 1px 8px 0 rgba(22, 22, 22, 0.2), 0 1px 4px 0 rgba(22, 22, 22, 0.2);
 }
 
+.modal {
+	max-height: 90vh;
+	overflow-y: scroll;
+}
+
 .verticalspacer {
 	height: 2.5rem;
 }
